# colorxcode

./: .gitignore  LICENSE  README.md  colib.py  colors.json  colors.py  main.py  pyproject.toml  requirements.txt  setup.py
.env/: pyproject.toml
colorxcode/: __init__.py
colorxcode/convert/: ColorLib.py  logging_config.py  unicode.py
